	may have set CLASSPATH and thus override the default
	(see #3)

    o	when constructing String references from character vectors,
	treat NA as null on the Java side (see #15)

    o	add .jsimplify(..., promote=TRUE) option to promote int
	to double if integer NAs are to be interpreted literally as
	-2147483648 values. (see #39)


0.9-6	2012-12-23
    o	bugfix: the first JVM parameters was shadowed by headless
	mode parameter if enabled (default on OS X).


0.9-5	2012-12-03
    o	add more debugging information in RJavaClassLoader to trace
	cases where class path entries are invalid or discarded

    o	detect support for -Xrs and enable it by default (this prevents
	Java from killing R process on interrupt)

    o	restore locales after Java initialization (some JVMs clobber
	locales with incompatible settings).

    o	add --enable-headless option which sets the java.awt.headless
	to true. In the auto mode this flag is only enabled on Mac OS X.
	Note that it is only set upon initialization, it does not
	affect already running JVMs.

0.9-4	2013-03-11
    o	added support for unboxing of Double[], Integer[] and Boolean[]
	to .jevalArray(.., simplify=TRUE) and thus also to .jcall()

    o	Windows: add Java configuartion paths before existing PATH
	entries

    o	Windows: honor a new option "java.home" to override JAVA_HOME
	environment variable and system settings to allow co-existence
	of other tools that may require differen Java paths.

    o	Windows: fix a buglet in error reporting when no Java is installed

    o	raise an error if the number of arguments to a Java call exceeds
	maxJavaPars. Previously, calls woud be silently truncated.
	Note that maxJavaPars can be raised by compiling rJava, e.g. with:
	PKG_CFLAGS=-DmaxJavaPars=96 R CMD INSTAL rJava_...

0.9-3	2011-12-10
    o	bugfix: .jinit() was failing on Java 1.4 with
	"cannot obtain Class.getSimpleName method ID"
	since the method is only present in Java 1.5+